<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="42dp" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvAccount"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp" />

    <ImageButton
        android:id="@+id/bGoals"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_above="@+id/bQuickPay"
        android:layout_alignLeft="@+id/bQuickPay"
        android:src="@drawable/goals"
        android:contentDescription="@string/Img_Goals" />

    <Button
        android:id="@+id/bOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/bOptionsLbl" />

    <ImageButton
        android:id="@+id/bQuickPay"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_above="@+id/bOptions"
        android:layout_alignLeft="@+id/bOptions"
        android:layout_marginBottom="20dp"
        android:src="@drawable/gold_dollar_sign2"
        android:contentDescription="@string/Img_QuickPay" />

    <ImageButton
        android:id="@+id/bPayDay"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_alignRight="@+id/bOptions"
        android:layout_below="@+id/bAccounts"
        android:src="@drawable/cash_envelope"
        android:contentDescription="@string/Img_PayDay" />

    <ImageButton
        android:id="@+id/bAccounts"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/bGoals"
        android:layout_alignRight="@+id/bPayDay"
        android:src="@drawable/four_pink_piggy_banks"
        android:contentDescription="@string/Img_Accounts" />

</RelativeLayout>
