<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GoalsView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llFeatures"
        android:orientation="vertical" >

        <ExpandableListView
            android:id="@+id/elvGoalsExpensesMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ExpandableListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFeatures"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llOptions"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bAddGoalExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bAddLbl" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llOptions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bBackLbl" />

        <Button
            android:id="@+id/bOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bOptionsLbl" />
    </LinearLayout>

</RelativeLayout>